fix horizontal scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,17 @@
 html {
+    max-width: 100%;
     scroll-behavior: smooth;
+    overflow-y: scroll;
+    overflow-x: hidden; 
   }
+
 *{
     margin: 0;
     padding: 0;
 }
 body{
     font-family: 'Montserrat', sans-serif;
+    max-width: 100%;
 }
 
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
@@ -21,7 +26,8 @@ body{
     background-repeat: no-repeat;
     /* background-position: center; */
     background-color: #070607;
-    color:#fff;      
+    color:#fff;     
+    width: 100%; 
    }
 
 .container-fluid{
@@ -109,81 +115,14 @@ body{
     font-size: 32px;
 }
 
-@media (max-width: 991px){
-    
-    .heading{
-        font-size: 2.4rem;
-        font-weight: 900;
-    }
-    
-}
-@media (max-width: 767px){
-    .container-fluid{
-        padding: 3% 1% 3%;
-    }
-    .big-heading{
-        margin: 5% 5%;
-        padding: 2%;
-    }
-    .heading{
-        font-size: 1.9rem;
-        font-weight: 800;
-    }
-    .sub-heading{
-        font-size: 1rem;
-    }
-    .brand-name{
-        font-size: 1.5rem;
-    }
-    .logo{
-        height: 30px;
-    }
-}
-@media (max-width: 510px){
-    .container-fluid{
-        padding: 6% 2% 6%;
-    }
-    .big-heading{
-        margin: 5% 5%;
-        padding: 4%;
-    }
-    .heading{
-        font-size: 2.5rem;
-        font-weight: 800;
-    }
-    .sub-heading{
-        font-size: 1.2rem;
-    }
-    .brand-name{
-        font-size: 1.5rem;
-    }
-    .logo{
-        height: 30px;
-    }
-    .float{
-        height: 40px;
-        width: 40px;
-    }
-    .my-float{        
-        margin-top:8px;
-        font-size: 24px;
-    
-    }
-    .icon-image{
-        height: 100px;
-        margin-bottom: 15px;
-    }
-    .feature-icon{
-        padding: 10px;
-    }
-}
+
 
 #features{
     background-color: rgb(230, 230, 230);
 }
 
 .feature-icon{     
-    padding: 7% 3%;
+    padding: 7% 0%;
     text-align: center;
     transition: transform .2s;
 }
@@ -194,7 +133,10 @@ body{
 
 .wood-log{
     background-image: url(../images/wooden-logs-in-forest.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
     min-height: 500px;
+   
 }
 
 .why-us-heading{
@@ -260,6 +202,7 @@ li{
 
 #contact {
     background-image: url(../images/pexels-jutta-albers-small.jpg);
+    background-size: cover;    
     min-height: inherit;
     background-repeat: no-repeat;
 }
@@ -277,11 +220,113 @@ li{
     box-shadow: 10px 10px 10px  rgba(184, 133, 125, 0.03);
 }
 
+.contact-heading{
+    margin-bottom: 4.5rem;
+}
+
 .logo1{
     height: 100px;
     margin-left: 100px;
 }
 
+@media (max-width: 991px){
+    
+    .heading{
+        font-size: 2.4rem;
+        font-weight: 900;
+    }
+    
+}
+@media (max-width: 767px){
+    .container-fluid{
+        padding: 3% 3% 3%;
+    }
+    .big-heading{
+        margin: 5% 5%;
+        padding: 2%;
+    }
+    .heading{
+        font-size: 3rem;
+        font-weight: 900;
+    }
+    .sub-heading{
+        font-size: 1.2rem;
+    }
+    .brand-name{
+        font-size: 1.5rem;
+    }
+    .logo{
+        height: 30px;
+    }
+    .icon-image{
+        height: 150px;
+        margin-bottom: 10px;
+    }
+    .feature-icon{
+        padding: 20px;
+    }
+    /* .fourP{
+        padding: 80px 100px;
+    } */
+    .contact-heading{
+        margin-bottom: 0;
+        margin-top: 3rem;
+    }
+}
+@media (max-width: 510px){
+    .container-fluid{
+        padding: 6% 2% 6%;
+    }
+    .big-heading{
+        margin: 5% 1%;
+        padding: 4%;
+    }
+    .heading{
+        font-size: 2.5rem;
+        font-weight: 800;
+    }
+    .sub-heading{
+        font-size: 1.2rem;
+    }
+    .brand-name{
+        font-size: 1.5rem;
+    }
+    .logo{
+        height: 30px;
+    }
+    .float{
+        height: 40px;
+        width: 40px;
+    }
+    .my-float{        
+        margin-top:8px;
+        font-size: 24px;    
+    }
+    .icon-image{
+        height: 100px;
+        margin-bottom: 15px;
+    }
+    .feature-icon{
+        padding: 10px;
+    }
+    .product-intro{
+        background-color: rgb(0, 0, 0) ;
+        color: #fff;
+        padding: 50px 40px;
+    }
+    .product-features{
+        padding: 50px 40px;
+    }
+    .products-heading{
+        background-color: orange;
+        padding-left: 80px;
+        transform: translate(-80px, 0px);
+    }
+    .contact-heading{
+        margin-bottom: 0;
+        margin-top: 3rem;
+    }
+}
 
 /* .item {
     width: 200px;
